objects/customer__c.object
<CustomObject>
    <fields>
        <fullName>AGENT_CODE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AGENT_CODE</label>
        <referenceTo>agents__c</referenceTo>
        <relationshipLabel>customers</relationshipLabel>
        <relationshipName>customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUST_CITY__c</fullName>
        <label>CUST_CITY</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUST_CODE__c</fullName>
        <displayFormat>Cust-{0000}</displayFormat>
        <label>CUST_CODE</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GRADE__c</fullName>
        <label>GRADE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newUnique__c</fullName>
        <externalId>true</externalId>
        <label>newUnique</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CUST_NAME</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CUST_CITY_c_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>CUST_CITY__c &lt;&gt;  UPPER(CUST_CITY__c)</errorConditionFormula>
        <errorMessage>CUST_CITY__c must be upper case</errorMessage>
    </validationRules>
</CustomObject>